--- a/core/web/frontend/iot-frontend/src/app/app.component.html
+++ b/core/web/frontend/iot-frontend/src/app/app.component.html
@@ -2,6 +2,7 @@
 <div class="app-container">
 
   <app-navigation></app-navigation>
+  <!-- <router-outlet></router-outlet> -->
   <app-dashboard></app-dashboard>
 
   <footer>
